cluster-configs/demo-traefik/backend-whoami2/510-backend-whoami2-svc.yaml
apiVersion: v1
kind:       Service

metadata:
  name:     backend-whoami2-svc

spec:
  selector:
    app:    backend-whoami2
  ports:
  - name:       web
    port:       80
    protocol:   TCP
