cluster-configs/demo-traefik/backend-whoami2/610-backend-whoami2-ingressRoute-websecure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind:       IngressRoute
metadata:
  # name:     whoami-web-tls
  name:     whoami2-websecure
spec:
  entryPoints:
    - websecure
  tls:
    certResolver:   le
  routes:
  - kind:       Rule
    match:      Host(`localhost`) && PathPrefix(`/whoami2`)
    services:
    - name:     backend-whoami2-svc
      port:     80
